--- a/CarpMuffin-Demo-Win/CarpMuffin-Demo-Win.csproj
+++ b/CarpMuffin-Demo-Win/CarpMuffin-Demo-Win.csproj
@@ -42,9 +42,14 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="Screens\ScreenNames.cs" />
+    <Compile Include="Screens\Splash\CarpMuffinSplashScreen.cs" />
+    <Compile Include="WindowsDemoGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenes\SceneNames.cs" />
+    <Compile Include="Scenes\SplashScene.cs" />
+    <Compile Include="Scenes\TitleScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -67,6 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Screens\Title\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
